# rocket-example

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
templates/: about.html.hbs  chuck.html.hbs  index.html.hbs
templates/partials/: head.html.hbs  navbar.html.hbs
